# m-explore

explore/: CMakeLists.txt
explore/config/: explore.yaml
explore/include/explore/: costmap_client.h  explore.h  utils.h
explore/launch/: explore.launch  explore_costmap.launch
explore/src/: costmap_client.cpp  explore.cpp  frontier_search.cpp
map_merge/launch/: map_merge.launch
map_merge/src/: map_merge.cpp
map_merge/src/combine_grids/: grid_warper.cpp  merging_pipeline.cpp
